# LuxeForgeStudio

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_RULES.md  README.md  RELEASE.md
.github/: PROJECT.md
addon/luxeforge_studio/: __init__.py  _innit_.py  operators.py  panel.py
addon/luxeforge_studio/generators/: body.py
addon/luxeforge_studio/geometry/: extruder.py  mash_builder.py  mesh_builder.py  path.py
addon/luxeforge_studio/models/: bag_parameters.py
addon/luxeforge_studio/ui/: panel.py
addon/luxeforge_studio/utils/: logger.py  units.py
addon/tests/: test_path.py
docs/: components.md  geometry_enigine.md  vision.md
src/luxeforge/: _innit_.py
src/luxeforge_blender/: __init__.py  addon.py
src/luxeforge_blender/bridge/: mesh_builder.py
src/luxeforge_blender/luxeforge_core/geometry/: arc.py  extruder.py  fillet.py  line.py  path.py  vector2.py
src/luxeforge_blender/luxeforge_core/models/: bag_parameters.py
src/luxeforge_blender/luxeforge_core/services/: bag_service.py
src/luxeforge_blender/ui/: __init__.py  operators.py
src/luxeforge_core/engine/: profile_generator.py
src/luxeforge_core/engine/body/: classic_body.py
src/luxeforge_core/geometry/: extruder.py  mesh_data.py  path.py  point.py
src/luxeforge_core/models/: bag_parameters.py
src/luxeforge_core/services/: bag_service.py
src/luxeforge_core/utils/: version.py
src/luxeforge_studio/: _innit_.py  properties.py
src/luxeforge_studio/generators/: body.py
src/luxeforge_studio/ui/: panel.py
tools/: .gitignore  CHANGELOG.md  build.py  pyproject.toml
(+7 files in other folders)
